style: reorganize home page layout and update css
Placed AudioPlayer and YoutubePlayer into appropriate containers for postioning/sizing.

removed hero.png from jsx file and implemented it as background image via css.

--- a/frontend/src/components/youtubePlayer/YoutubePlayerStyle.css
+++ b/frontend/src/components/youtubePlayer/YoutubePlayerStyle.css
@@ -1,8 +1,8 @@
-/* YouTube Video Embed Style */
 .video-container {
     position: relative;
-    padding-bottom: 56.25%; /* 16:9 aspect ratio */
-    height: 0;
+    width: 100%;          
+    max-height: 100%;      
+    aspect-ratio: 16 / 9;   
     overflow: hidden;
     margin-top: 30px;
     border-radius: 12px;
