style : push footer to bottom of page when less content displayed

--- a/frontend/src/globalStyle.css
+++ b/frontend/src/globalStyle.css
@@ -59,3 +59,14 @@ html {
     font-size: 16px;
   }
 }
+
+/* push footer to bottom */
+.app {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.app main {
+  flex: 1;
+}
