--- a/frontend/src/globalStyle.css
+++ b/frontend/src/globalStyle.css
@@ -11,12 +11,30 @@ html, body {
   background-color: #0e0e0e;
   color: #f0f0f0;
   overflow-x: hidden;
+  font-size: 16px;
 }
 
 body {
   font-family: Arial, sans-serif;
   color: #333;
 }
+
+li {
+  text-decoration: none;
+}
+
+li a {
+  color: #FBFDF7;
+  font-weight: 600;
+  text-decoration: none;
+  transition: color 0.3s;
+}
+
+li a:hover,
+li a.active {
+  color: #d60132;
+}
+
 
 h2 {
   color: #444;
