feature : add dynamic station carousel
Created new component StationCarousel, which can be used to display stations within a list.
Parameters are:
- displayName : set what will be displayed as browsers header
- stationList : what shows to display

Doing it in this way increases reusability for the code as filtered lists can be retrieved from the database and displayed. Example Live Now, Coming Up and New could all be displayed by reusing the same compoent with different inputs.

Also made minor changes
- moved live now to homepage, removed separate page.
- change artistPage to stationPage
- add logo and live to station database.
- minor style changes.

--- a/frontend/src/pages/home/HomeStyle.css
+++ b/frontend/src/pages/home/HomeStyle.css
@@ -12,17 +12,9 @@
 
 .media {
   display: flex;
-  height: 75vh;
+  flex-direction: column;
+  padding: 3rem;
   width: 100%;
-  background-color: transparent;
-  align-items: center;
-}
-.media .leftContent, .media .rightContent {
-  flex: 1;
-  padding: 1rem;
-  box-sizing: border-box;
-  overflow: hidden;
-  background-color: transparent;
 }
 
   
