--- a/frontend/src/components/media/audioPlayer/AudioPlayer.css
+++ b/frontend/src/components/media/audioPlayer/AudioPlayer.css
@@ -3,6 +3,9 @@
   color: #fff;
   text-align: center;
   padding: 40px 20px;
+  height: 100%;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .audioPlayer h2 {
