--- a/frontend/src/pages/home/HomeStyle.css
+++ b/frontend/src/pages/home/HomeStyle.css
@@ -1,21 +1,79 @@
 /* media section */
 
 .homePage{
-  margin: 0;
-  height: 100vh;
   background-image: url('./Hero.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-}
-
-.media {
   display: flex;
   flex-direction: column;
-  padding: 3rem;
-  width: 100%;
+  padding: 2rem;
+  box-sizing: border-box;
+  min-height: 100vh;
+  align-items: center;
+  gap: 3rem
 }
 
-  
-  
+.twoColumnSection {
+  display: flex;
+  width: 80%;
+  justify-content: space-between;
+  gap: 2rem;
+  flex-wrap: wrap;
+}
+
+.leftColumn {
+  max-width: 40%;
+  padding: 2rem;
+}
+
+.rightColumn h1 {
+  padding-left: 2rem;
+  padding-top: 1rem;
+  font-size: 3rem;
+}
+
+.leftColumn,
+.rightColumn {
+  flex: 1 1 45%;
+  box-sizing: border-box;
+  background-color: #111111ab;
+  border-radius: 25px;
+}
+
+.tagline {
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.getStarted {
+  width: 100%;
+  align-items: right;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 1rem;
+  padding: 1rem;
+}
+
+.getStarted button {
+  font-size: 1.5rem;
+}
+
+.stationDisplay{
+  width: 80%;
+}
+
+@media (max-width: 768px) {
+  .twoColumnSection {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .leftColumn,
+  .rightColumn {
+    width: 100%;
+    text-align: center;
+  }
+}
