--- a/frontend/src/components/media/audioPlayer/AudioPlayer.css
+++ b/frontend/src/components/media/audioPlayer/AudioPlayer.css
@@ -1,10 +1,15 @@
 .audioPlayer {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   text-align: left;
   height: 100%;
   width: 100%;
   box-sizing: border-box;
+}
+
+.topContent {
+  display: flex;
+  flex-direction: row;
 }
 
 .audioPlayer h2 {
@@ -18,7 +23,11 @@
 }
 
 .audioPlayer .rightColumn {
+  display: flex;
+  flex-direction: column;
   padding-top: 1rem;
+
+
 }
 
 .stationLogo {
