--- a/frontend/src/pages/home/HomeStyle.css
+++ b/frontend/src/pages/home/HomeStyle.css
@@ -8,7 +8,7 @@
   background-attachment: fixed;
   display: flex;
   flex-direction: column;
-  padding: 2rem;
+  padding-top: 4rem;
   box-sizing: border-box;
   min-height: 100vh;
   align-items: center;
@@ -17,7 +17,7 @@
 
 .twoColumnSection {
   display: flex;
-  width: 80%;
+  width: 85%;
   justify-content: space-between;
   gap: 2rem;
   flex-wrap: wrap;
@@ -62,7 +62,7 @@
 }
 
 .stationDisplay{
-  width: 80%;
+  width: 85%;
 }
 
 @media (max-width: 768px) {
