--- a/frontend/src/components/browsers/artist/artistGrid/ArtistGridStyle.css
+++ b/frontend/src/components/browsers/artist/artistGrid/ArtistGridStyle.css
@@ -1,11 +1,9 @@
-.gridComponent {
-  padding: 30px 20px;
-}
-
-.displayName {
-  font-size: 2rem;
-  margin-bottom: 20px;
-  color: #ff0050;
+.gridComponent{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    background-color: transparent;
+    gap: 1rem;
 }
 
 .gridDisplay {
