--- a/frontend/src/globalStyle.css
+++ b/frontend/src/globalStyle.css
@@ -12,6 +12,8 @@ html, body {
   color: #f0f0f0;
   overflow-x: hidden;
   font-size: 16px;
+  background: url('https://images.unsplash.com/photo-1538342315856-a8a3cbc11944?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') no-repeat center center fixed;
+  background-size: cover;
 }
 
 body {
