--- a/frontend/src/pages/entry/registration/RegistrationStyle.css
+++ b/frontend/src/pages/entry/registration/RegistrationStyle.css
@@ -1,9 +1,14 @@
 .pageContents {
-  max-width: 600px;
-  margin: 50px auto;
-  padding: 20px;
+  margin: auto;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
   font-family: sans-serif;
   text-align: center;
+  background-color: #2a2a2a9c;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 25px;
 }
 
 .pageContents h2 {
@@ -52,6 +57,7 @@
 }
 
 .formContainer {
+  width: 50%;
   background-color: #1e1e1e;
   padding: 20px;
   border-radius: 10px;
@@ -59,8 +65,13 @@
 }
 
 @media (max-width: 600px) {
+
+  .pageContents {
+  width: 85%;
+}
+
   .selectionButtons {
-    flex-direction: column;
+    flex-direction: row;
     gap: 15px;
   }
 
@@ -71,5 +82,9 @@
 
   .selectionButtons button svg {
     font-size: 32px;
+  }
+
+  .formContainer {
+    width: 85%;
   }
 }
