--- a/frontend/src/pages/stationBrowser/StationBrowserStyle.css
+++ b/frontend/src/pages/stationBrowser/StationBrowserStyle.css
@@ -1,8 +1,4 @@
-body {
-    background: url('https://images.unsplash.com/photo-1538342315856-a8a3cbc11944?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') no-repeat center center fixed;
-    background-size: cover;
-    font-family: 'Segoe UI', Roboto, sans-serif;
-}
+
 
 .pageContent{
     display: flex;
@@ -14,4 +10,7 @@ body {
 
 .liveDisplay, .allDisplay {
     width: 85%;
+    background-color: rgba(0, 0, 0, 0.616);
+    border-radius: 25px;
+    padding: 2rem;
 }
