--- a/frontend/src/components/media/audioPlayer/AudioPlayerStyle.css
+++ b/frontend/src/components/media/audioPlayer/AudioPlayerStyle.css
@@ -7,6 +7,10 @@
   box-sizing: border-box;
 }
 
+.audioPlayer p {
+  font-weight: bold;
+}
+
 .topContent {
   display: flex;
   flex-direction: row;
@@ -26,6 +30,18 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+.titleTag{
+  padding-bottom: 1rem;
+}
+
+.playingInfo {
+  padding-top: 1rem;
+}
+
+.playingInfo h3 {
+  padding-bottom: 1rem;
 }
 
 .stationLogo {
