--- a/frontend/src/globalStyle.css
+++ b/frontend/src/globalStyle.css
@@ -1,50 +1,21 @@
-
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-html, body {
-  font-family: 'Poppins', sans-serif; 
-  background-color: #0e0e0e;
-  color: #f0f0f0;
-  overflow-x: hidden;
+html,
+body {
+  font-family: 'Poppins', 'Helvetica Neue', sans-serif;
   font-size: 16px;
+  color: #f0f0f0;
+  background-color: #0e0e0e;
+  overflow-x: hidden;
   background: url('https://images.unsplash.com/photo-1538342315856-a8a3cbc11944?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') no-repeat center center fixed;
   background-size: cover;
 }
 
-body {
-  font-family: Arial, sans-serif;
-  color: #333;
-}
-
-h2 {
-  color: #444;
-}
-
-a {
-  color: #1e90ff;
-  text-decoration: none;
-}
-
-  button {
-    background-color: #ff004f;
-    color: #fff;
-    font-weight: bold;
-    border: none;
-    padding: 10px 16px;
-    border-radius: 8px;
-    transition: background-color 0.3s ease;
-  }
-  
-  button:hover {
-    background-color: #e60047;
-  }
-
-/* WebKit Scrollbar */
+/* scrollbars */
 ::-webkit-scrollbar {
   width: 8px;
 }
@@ -53,17 +24,38 @@ a {
   border-radius: 8px;
 }
 
-html {
-  overflow-y: scroll;
+/* type*/
+h1, h2, h3, h4, h5, h6 {
+  color: #ffffff;
+  font-weight: bold;
 }
 
-@media (max-width: 600px) {
-  body {
-    font-size: 16px;
-  }
+p {
+  color: #b3b3b3;
 }
 
-/* push footer to bottom */
+a {
+  color: #1e90ff;
+  text-decoration: none;
+}
+
+/* buttons */
+button {
+  background-color: #ff004f;
+  color: #fff;
+  font-weight: bold;
+  border: none;
+  padding: 10px 16px;
+  border-radius: 8px;
+  transition: background-color 0.3s ease;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #e60047;
+}
+
+/* layout */
 .app {
   display: flex;
   flex-direction: column;
@@ -72,4 +64,65 @@ html {
 
 .app main {
   flex: 1;
+}
+
+/* card displays */
+.card {
+    cursor: pointer;
+    height: 100%;
+    width: auto;
+    background: #0000007a;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.363);
+    transition: transform 0.3s;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem;
+}
+
+.card:hover {
+    transform: scale(1.05);
+}
+
+.card img {
+    width: 100%;
+    height: auto;
+    max-height: 150px;
+    object-fit: contain;
+    border-radius: 8px;
+    margin-bottom: 1rem;
+}
+
+.cardContents {
+    padding: 1rem;
+    text-align: center;
+}
+
+/* grids */
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 24px;
+  padding: 40px;
+}
+
+@media (max-width: 768px) {
+
+  .card img {
+        max-height: 110px;
+    }
+  .cardContents h3 {
+        font-size: 1rem;
+    }
+
+  .grid {
+    padding: 20px;
+    grid-template-columns: 1fr;
+  }
+
+  body {
+    font-size: 16px;
+  }
 }
