--- a/frontend/src/pages/stationPage/StationPageStyle.css
+++ b/frontend/src/pages/stationPage/StationPageStyle.css
@@ -100,35 +100,12 @@
 }
 
 /* card grid */
-.card-grid {
+.cardGrid {
   display: flex;
   justify-content: center;
   gap: 5rem;
 }
 
-.card {
-  background: #1e1e1e;
-  padding: 25px;
-  border-radius: 16px;
-  box-shadow: 0 0 10px #FF005026;
-  transition: all 0.3s ease-in-out;
-}
-
-.card:hover {
-  transform: translateY(-8px);
-  box-shadow: 0 0 20px #FF005026;
-}
-
-.card h4 {
-  font-size: 1.5rem;
-  margin-bottom: 12px;
-  color: #ffffff;
-}
-
-.card p {
-  font-size: 1rem;
-  color: #cccccc;
-}
 
 .link-button {
   background: #ff0050;
