--- a/frontend/src/components/calendars/monthlyCalendar/MonthlyCalendarStyle.css
+++ b/frontend/src/components/calendars/monthlyCalendar/MonthlyCalendarStyle.css
@@ -60,7 +60,9 @@
     margin: 4px auto 0;
 }
 
+
 .calendarShows {
+    width: 100%;
     margin-top: 2rem;
 }
 
@@ -71,6 +73,7 @@
 }
 
 .calendarShowList {
+    width: 100%;
     margin-top: 1rem;
     display: flex;
     flex-direction: column;
@@ -78,6 +81,10 @@
 }
 
 .calendarShowCard {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;  
     background-color: #111111ab;
     padding: 1rem;
     border-radius: 0.75rem;
@@ -100,9 +107,11 @@
     padding: 0.75rem;
   }
 
+
   .showTitle {
     font-size: 1rem;
   }
+  
 
   .showInfo,
   .showDescription {
