--- a/frontend/src/components/footer/FooterStyle.css
+++ b/frontend/src/components/footer/FooterStyle.css
@@ -6,3 +6,11 @@
     font-size: 0.9rem;
     border-top: 1px solid #222;
   }
+
+.logout{
+  margin-bottom: 1rem;
+}
+
+.logout:hover{
+  color: #ff004f;
+}
