--- a/frontend/src/globalStyle.css
+++ b/frontend/src/globalStyle.css
@@ -1,3 +1,4 @@
+/* global style */
 * {
   margin: 0;
   padding: 0;
@@ -15,16 +16,7 @@ body {
   background-size: cover;
 }
 
-/* scrollbars */
-::-webkit-scrollbar {
-  width: 8px;
-}
-::-webkit-scrollbar-thumb {
-  background: #444;
-  border-radius: 8px;
-}
-
-/* type*/
+/* text */
 h1, h2, h3, h4, h5, h6 {
   color: #ffffff;
   font-weight: bold;
@@ -34,10 +26,6 @@ p {
   color: #b3b3b3;
 }
 
-a {
-  color: #1e90ff;
-  text-decoration: none;
-}
 
 /* buttons */
 button {
@@ -50,54 +38,70 @@ button {
   transition: background-color 0.3s ease;
   cursor: pointer;
 }
-
 button:hover {
   background-color: #e60047;
 }
 
-/* layout */
+/* scroll */
+::-webkit-scrollbar {
+  width: 8px;
+}
+::-webkit-scrollbar-thumb {
+  background: #444;
+  border-radius: 8px;
+}
+
+/* layouts */
 .app {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
 }
-
 .app main {
   flex: 1;
 }
 
-/* card displays */
+.pageContents,
+.section {
+  background-color: #111111ab;
+  border-radius: 25px;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.section {
+  width: 85%;
+}
+
+/* cards */
 .card {
-    cursor: pointer;
-    height: 100%;
-    width: auto;
-    background: #0000007a;
-    border-radius: 10px;
-    overflow: hidden;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.363);
-    transition: transform 0.3s;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 2rem;
+  cursor: pointer;
+  background: #0000007a;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.363);
+  transition: transform 0.3s;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2rem;
 }
-
 .card:hover {
-    transform: scale(1.05);
+  transform: scale(1.05);
 }
-
 .card img {
-    width: 100%;
-    height: auto;
-    max-height: 150px;
-    object-fit: contain;
-    border-radius: 8px;
-    margin-bottom: 1rem;
+  width: 100%;
+  max-height: 150px;
+  object-fit: contain;
+  border-radius: 8px;
+  margin-bottom: 1rem;
 }
-
 .cardContents {
-    padding: 1rem;
-    text-align: center;
+  padding: 1rem;
+  text-align: center;
 }
 
 /* grids */
@@ -108,20 +112,18 @@ button:hover {
   padding: 40px;
 }
 
+/* mobile */
 @media (max-width: 768px) {
-
   .card img {
-        max-height: 110px;
-    }
+    max-height: 110px;
+  }
   .cardContents h3 {
-        font-size: 1rem;
-    }
-
+    font-size: 1rem;
+  }
   .grid {
     padding: 20px;
     grid-template-columns: 1fr;
   }
-
   body {
     font-size: 16px;
   }
