--- a/frontend/src/pages/dashboards/stationDashboard/StationDashboardStyle.css
+++ b/frontend/src/pages/dashboards/stationDashboard/StationDashboardStyle.css
@@ -8,6 +8,7 @@
 
 .pageTop,
 .pageBottom {
+  width: 100%;
   display: flex;
   flex-direction: row;
   width: 90%;
@@ -33,6 +34,45 @@
 .rightSide {
   flex: 2;
   min-width: 280px;
+}
+
+.title {
+  text-align: center;
+}
+
+.stationDetails, .statusTools, .audio{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  background-color: #111111e7;
+  border-radius: 25px;
+  padding: 1rem;
+  margin-top: 1rem;
+  width: 100%;
+  text-align: left;
+}
+
+.singleCard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 300px;
+  margin: 0 auto;
+  padding: 1rem;
+  border-radius: 20px;
+  background-color: #1e1e1e;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+.singleCard img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 12px;
+}
+
+.singleCard:hover {
+  transform: scale(1.02);
 }
 
 /* mobile */
